syntax = "proto3";

option csharp_namespace = "pg.GrpcController.Admin.Goods";
package pg.GrpcController.Admin.Goods;
import "Common/AdminInfo.proto";

service IGoodsQRService { 
      
    rpc UpdateGoodsQRInfo(GoodsQRServiceTypes.UpdateGoodsQRInfo_Request) 
        returns (GoodsQRServiceTypes.UpdateGoodsQRInfo_Response );
    
}
 
message GoodsQRServiceTypes{
    message GoodsQRInfo{
        int64 QRInfo_Id=1;
        int64 ScanQRGift_Id=2;
        int64 GiftStartTime =3;
        int64 GiftExpirationTime=4;
        string GoodsInfo=5;
    }
   message UpdateGoodsQRInfo_Request{
        AdminInfo AdminInfo=1;
        int64 BatchId=2;
        repeated GoodsQRInfo Infos=3;
   }
   message UpdateGoodsQRInfo_Response{
       bool Ok=1;
       optional string Message=2;
   }
}